--- a/Project/M0.md
+++ b/Project/M0.md
@@ -1,8 +1,20 @@
-# M0
+# M0 > Project Idea
 
 For this milestone and project, you will work in teams of 3 people.
 
+You will create a web application for a startup.
+
 ## General Tasks
 
+* [Sign up](https://docs.google.com/spreadsheets/d/1pVBAiZWG9DyNRUvRL634A3sWh4YqUjSYvSsELyl2Y2E/edit?usp=sharing) for a team and repo.
 * Create a elevator pitch for your project idea.
-* Create an annotated wireframe describing how the main page of application would work.
+* Create a draft wireframe describing how the main page of application would work.
+
+This milestone is worth 5%.
+
+## Submission
+
+**The assignment is due Wednesday, Sept 29th, before midnight**.
+
+Provide your elevator pitch and draft wireframe in your team's README.md. 
+To submit your work, commit and push all changes to your repository by the deadline.
