--- a/Project/M0.md
+++ b/Project/M0.md
@@ -10,7 +10,7 @@ You will create a web application for a startup.
 * Create a elevator pitch for your project idea.
 * Create a draft wireframe describing how the main page of application would work.
 
-This milestone is worth 5%.
+This milestone is worth 5% of course total.
 
 ## Submission
 
