--- a/Project/M0.md
+++ b/Project/M0.md
@@ -7,7 +7,7 @@ You will create a web application for a startup.
 ## General Tasks
 
 * [Sign up](https://docs.google.com/spreadsheets/d/1pVBAiZWG9DyNRUvRL634A3sWh4YqUjSYvSsELyl2Y2E/edit?usp=sharing) for a team and repo.
-* Create a elevator pitch for your project idea.
+* Create an elevator pitch for your project idea.
 * Create a draft wireframe describing how the main page of application would work.
 
 This milestone is worth 5% of course total.
