--- a/Project/M1.md
+++ b/Project/M1.md
@@ -12,7 +12,7 @@ You will implement roughly half of the functionality of your startup application
 * Implement front-end (30--50%) with a web framework.
 * Implement back-end (30--50%) with node.js/express [mock].
 
-### 🎛️ Landing page
+### 🌐  Landing page
 
 Complete a landing page for your startup. This will help you describe the goal and value of your application.
 
@@ -29,7 +29,7 @@ Incorporate the following elements (but not limited to) into the design of your 
 * Page should be responsive.
 * Maintain good page aesthetics (colors, whitespace, alignment).
 
-### 🎛️ Front-end (30--50%) with web framework
+### 🎨 Front-end (30--50%) with web framework 🚧  
 
 If not already completed, create a complete set of wireframes for the pages of your web application.
 
@@ -39,7 +39,7 @@ Implement 30--50% of pages/components required for a minium viable product of yo
 
 * Use one of the following web frameworks: Angular, Vue, React.
 
-### 🎛️ Back-end (30--50%) with node.js/express [mock].
+### 📦  Back-end (30--50%) with node.js/express [mock].
 
 Design a set of REST endpoints for your application.
 
