--- a/Project/M1.md
+++ b/Project/M1.md
@@ -98,7 +98,7 @@ Teaching staff will provide helpful feedback or suggestions if they identify any
 * Implement front-end (30--50%) with a web framework. (30%)
 * Implement back-end (30--50%) with node.js/express [mock]. (20%)
 * Milestone report (with wireframes/endpoints). (15%)
-* Checkpoint. (5%)
+* Checkpoint and GitHub Project tracking. (5%)
 * Screencast demostrates each task [5--15 minutes, total]. (10%)
 
 Points may be deducted for not following constraints, poor quality of implementation, poor task communication and delegation, or failing to include sufficient detail required to evaluate capabilities.
