--- a/Project/M2.md
+++ b/Project/M2.md
@@ -4,7 +4,7 @@ For this milestone and project, you will work in teams of 3 people.
 
 You will implement most of the functionality of your startup application, including back-end functionality.
 
-**Due Friday, November 5th, before midnight.**
+**Due Monday, November 1st, before midnight.**
 
 ## General Tasks
 
@@ -112,4 +112,4 @@ Ensure your repository contains:
 * code and configuration for web app
 * a link to screencast that demostrates each milesone task.
 
-**Due Friday, November 5th, before midnight.**
+**Due Monday, November 1st, before midnight.**
