--- a/Project/M3.md
+++ b/Project/M3.md
@@ -11,7 +11,7 @@ You will complete the functionality of your startup application, and host the ap
 
 ## General Tasks
 
-* Implement dashboard and visitor instrumentation (BONUS).
+* Implement dashboard and site instrumentation (BONUS).
 * Implement and execute runbook for deploying site.
 * Acceptance tests (complete remaining app functionality).
 
